.metadata/.plugins/org.eclipse.cdt.ui/04Graph.build.log
12:59:29 **** Incremental Build of configuration Debug for project 04Graph ****
make all 
Building file: ../src/04Graph.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/04Graph.d" -MT"src/04Graph.d" -o "src/04Graph.o" "../src/04Graph.cpp"
../src/04Graph.cpp: In function ‘int main()’:
../src/04Graph.cpp:140:12: error: request for member ‘resize’ in ‘adj_list’, which is of non-class type ‘std::list<int> [(((sizetype)(((ssizetype)g.graph::cities) + -1)) + 1)]’
   adj_list.resize[g.cities];
            ^
make: *** [src/04Graph.o] Error 1

12:59:29 Build Finished (took 276ms)

